src/objects/CMC_Estimate_Week__c.object
<CustomObject>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>E2_Milestone1ColorCode__c</fullName>
        <description>This field is used for sub-milestones color code</description>
        <label>Milestone1ColorCode</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>E2_Milestone1__c</fullName>
        <description>This field is used for sub-milestones</description>
        <inlineHelpText>This field is used for sub-milestones</inlineHelpText>
        <label>Milestone1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>E2_Milestone2ColorCode__c</fullName>
        <description>This field is used for sub-milestones color code</description>
        <label>Milestone2ColorCode</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>E2_Milestone2__c</fullName>
        <description>This field is used for sub-milestones</description>
        <label>Milestone2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>E2_MilestoneColorCode__c</fullName>
        <description>This field contains the Hex HTML color code value; Used in Estimator 2.0 APP</description>
        <inlineHelpText>Need Hex Code RGB (eg. #FFFFFF)</inlineHelpText>
        <label>MilestoneColorCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>E2_PhaseColorCode__c</fullName>
        <description>This field contains the hex code value of html color codes; used in Estimator 2.0 App</description>
        <inlineHelpText>Need Hex Code RGB (eg. #FFFFFF)</inlineHelpText>
        <label>PhaseColorCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Estimate__c</fullName>
        <label>Estimate</label>
        <referenceTo>CMC_Presales_LOE__c</referenceTo>
        <relationshipLabel>Estimate Weeks</relationshipLabel>
        <relationshipName>Estimate_Weeks</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Milestone__c</fullName>
        <label>Milestone</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <description>The order the weeks are displayed in the Estimator</description>
        <inlineHelpText>The order the weeks are displayed in the Estimator</inlineHelpText>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phase__c</fullName>
        <description>Phase this week resides in</description>
        <inlineHelpText>Phase this week resides in</inlineHelpText>
        <label>Phase</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Estimate Week</label>
    <nameField>
        <label>Week Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Estimate Weeks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>